data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_890.wast
;; 1. **Test with Indirect Function Calls within Loop**:    - Description: Create a loop that performs multiple `call_indirect` instructions with varying `typeidx` values. Ensure some types are mismatched with the function signatures in the table.    - Constraint: Check if the loop reinitializes properly and if type checking correctly prevents invalid indirect calls.    - Relation: Improper handling of `call_indirect` can lead to execution of unintended functions.

(assert_invalid
  (module
    (table 1 funcref)
    (type (func (param i32) (result i32)))
    (type (func (param f32) (result f32)))
    (func (param i32) (result i32)
      (local.get 0)
    )
    (func (param f32) (result f32)
      (local.get 0)
    )
    (func
      (loop (param i32)
        (call_indirect (type 1) (i32.const 0) (local.get 0))
        (call_indirect (type 0) (i32.const 0) (local.get 0))
        (br 0)
      )
    )
  )
  "type mismatch"
)